[tool.poetry]
name = "space-shemup"
version = "0.1.0"
description = ""
authors = ["Cyborg <68708656+cyboooooorg@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
